--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -49,7 +49,7 @@
 
         <form class="create-form">
 
-          <div class="form-group has-success">
+          <div class="form-group burger-input">
             <label class="form-control-label" for="burgerName">Burger Name</label>
             <input class="form-control form-control-success" type="text" id="burgerName" name="name" required>
           </div>
